:construction: Added new navbar to the bottom for navigation and improved navbar at the top.

--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArmadilLogin PLUS</title>
   </head>
-  <body>
-    <div id="root"></div>
+
+  <body style="margin:0; padding:0; justify-content: center">
+    <div style="margin: 0; padding:0; max-width: none" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
